<?xml version="1.0"?>
<package>
  <name>adept_one_description</name>
  <version>0.0.0</version>
  <description>Adept One robot description</description>

  <maintainer email="andrewjshort@gmail.com">Andrew Short</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
